<resources>
    <string name="app_name">TriviaQuiz</string>
    <string name="title">TriviaQuiz</string>
    <string name="start_quiz_button">Start Quiz</string>
    <string name="number_of_questions_title">Number of Questions</string>
    <string name="category_title">Category</string>
    <string name="difficulty_title">Difficulty</string>
    <string name="question_type_title">Question Type</string>
    <string name="number_of_question_default">10</string>
    <string name="result_title">Results</string>
    <string name="result_text">You answered \n %1$d/%2$d \n questions correctly</string>
    <string name="menu_button">Go To Menu</string>
    <string name="reveal_button">Reveal</string>
    <string name="question_text">%1$s</string>

    <string-array name="categories">
        <item>Any Category</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp;</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>
    </string-array>
    <string-array name="difficulties">
        <item>Any Difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="question_types">
        <item>Any Type</item>
        <item>Multiple Choice</item>
        <item>True/False</item>
    </string-array>
</resources>