<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/number_of_question_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_questions_title" />

                <EditText
                    android:id="@+id/number_of_question_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:inputType="numberDecimal"
                    android:text="@string/number_of_question_default"
                    android:maxLength="2"
                    android:ellipsize="end"
                    android:background="@drawable/input_box_background"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/category_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_title" />

                <Spinner
                    android:id="@+id/category_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:ellipsize="end"
                    android:background="@drawable/input_box_background"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/difficulty_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty_title"/>

                <Spinner
                    android:id="@+id/difficulty_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:ellipsize="end"
                    android:background="@drawable/input_box_background"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question_type_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_type_title" />

                <Spinner
                    android:id="@+id/question_type_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:ellipsize="end"
                    android:background="@drawable/input_box_background"/>
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_quiz_button" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>